// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Literal p test 1`] = `
<input
  className="ruleInput"
  onChange={[Function]}
  type="text"
  value="p"
/>
`;

exports[`Literal undefined test 1`] = `
<input
  className="ruleInput"
  onChange={[Function]}
  type="text"
/>
`;
